# amaze-llvm-obfuscator

./: .gitignore  CMakeLists.txt  CMakeLists.txt.legacy  LICENSE  README.md  legactscriptif_u_need.md  run.sh  test_license.c  test_obfuscation.py
Pass/: MBABasis.h  MBASolver.cpp  MBASolver.h  Substitution.cpp
Test/: input.c
docs/: architecture.md  performance_evaluation.md  resistance_evaluation.md
evaluation/: README.md  requirements.txt
evaluation/angr/: angr_test.py  evaluation_demo.c  run_benchmark.sh
evaluation/z3/: mba_z3_benchmark.py
lib/: BogusControlFlow.cpp  BogusControlFlow.h  ConstantObfuscation.cpp  ConstantObfuscation.h  PipelineRegistration.cpp  SplitBasicBlocks.cpp  SplitBasicBlocks.h  StringObfuscation.cpp  StringObfuscation.h  Substitution.cpp  Substitution.h
lib/Utils/: ConstantAnalyzer.cpp  ConstantAnalyzer.h  EnvBinding.h  MBABasis.h  MBABuilder.cpp  MBABuilder.h  MBAEngine.cpp  MBAEngine.h  MBASolver.cpp  MBASolver.h
real_world_tests/: sqlite_test.c  test_sqlite.py  test_tiny_aes.py
test/: input subtest.c  input.c
